2017-08-28  Per Bothner  <per@bothner.com>

	* kawa.texi: Document in-http-server and in-servlet.

2017-08-23  Per Bothner  <per@bothner.com>

	* kawa.texi (Eval and Environments): Document environment-fold.

2017-08-05  Per Bothner  <per@bothner.com>

	* kawa.texi (Repeat forms): Add subsection on sub-patterns.

2017-08-02  Per Bothner  <per@bothner.com>

	* kawa.texi (Repeat forms): New section.

2017-07-29  Per Bothner  <per@bothner.com>

	* kawa.texi: Document '?' conditional match form and its use.
	* news.texi: Note '?' form.

2017-07-26  Per Bothner  <per@bothner.com>

	* kawa.texi (Extended formals): Update and expand.

2017-07-16  Per Bothner  <per@bothner.com>

	* kawa.texi: Add @kdb commands for better styling.
	Also fix error in example - using make-vector instead of vector.

2017-07-15  Frank Ruben <gitlab@mg.gitlab.com>

	* kawa.texi (Method operations): Fix typo in example.
	This fixes GitLab issue #14.

2017-07-15  Per Bothner  <per@bothner.com>

	* kawa.texi: Update about lambda expressions.

2017-07-09  Per Bothner  <per@bothner.com>

	* kawa.texi (Application and Arguments Lists): Fix some typos.
	(Extended formals): Move earlier.

2017-06-08  Per Bothner  <per@bothner.com>

	* kawa.texi (Ideas and tasks): End-position recording is now working.
	* news.html: Note this.

2017-04-30  Per Bothner  <per@bothner.com>

	* kawa.texi (Source distribution):
	Improve instructions for building documentation.

	* kawa.texi (Extended formals): Refactor to avoid texinfo.tex bug.

	* texinfo.tex: Use newer version.

	* kawa.texi: Update for Java 8 now being the default.

2017-04-26  Per Bothner  <per@bothner.com>

	* Makefile.am (kawa.xml): Change Top node to index.html, not start.html.
	(kawa-manual.epub): Update to deal with above change.
	* style/kawa-ebook.js: Update sidebar handling for index.html.
	Also, various changes in readiness for html (not xml) files.

	* kawa.texi: Some minor fixes.

2017-04-25  Per Bothner  <per@bothner.com>
