@@ -1,5 +1,8 @@
 2017-08-28  Per Bothner  <per@bothner.com>
 
+	* Compilation.java (warnUninitialized): New option.
+	* InlineCalls (visitReferenceExp): Check warnUninitialized.
+
 	* InlineCalls.java (visitSetExp): Fix value tracker.
 	Specifically, update variable value *after* visiting new value.
 	This fixes gitlab issue #3 "Crash (JVM exit) on malformed letrec".
